fix: overflow of classes and refactor classes
The overflowing classroom overview was fixed. The days had to be rendered inside the classes and the styles had to be changed.

--- a/src/pages/Schedules/css/classes.css
+++ b/src/pages/Schedules/css/classes.css
@@ -1,5 +1,7 @@
 .classes {
   display: grid;
   grid-template-columns: repeat(7, 1fr);
-  grid-template-rows: repeat(12, 1fr);
+  grid-template-rows: 3rem repeat(12, 1fr);
+  grid-row: 1 / 3;
+  overflow: auto;
 }
