--- a/src/pages/Schedules/css/days.css
+++ b/src/pages/Schedules/css/days.css
@@ -1,4 +1,5 @@
 .days {
+  grid-column: 1 / -1;
   display: grid;
   grid-template-columns: repeat(7, 1fr);
   border: 1px solid black;
