--- a/src/pages/Schedules/css/hours.css
+++ b/src/pages/Schedules/css/hours.css
@@ -1,4 +1,5 @@
 .hours {
+  grid-row: 2 / 3;
   display: grid;
   grid-template-rows: repeat(12, 1fr);
 }
